--- a/index.html
+++ b/index.html
@@ -1,7 +1,278 @@
-cat > index.html << 'EOF'
-<!doctype html>
-<html>
-  <head><meta charset="utf-8"><title>My Site</title></head>
-  <body><h1>Hello GitHub Pages</h1></body>
-</html>
-EOF
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> WendyNotBurger </title>
+  <!--link rel="stylesheet" href="css/normalize.css" /-->
+  <link rel="stylesheet" href="./styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/972df6eb1d.js" crossorigin="anonymous"></script>
+  <script defer src="./js/main.js"></script>
+</head>
+
+<body>
+  <header>
+    <!-- Top Navigation -->
+    <nav>
+      <div class="nav-links">
+        <div class="nav-main-links">
+          <ul class="topnav">
+            <!-- Main Logo -->
+            <li>
+              <a href="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/307337851_533824542081747_5371259397579522463_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=1-9atA9s334Q7kNvwFTm0Yu&_nc_oc=AdkUeQsoJ9dIPIg5TWU20lGp4InmXlngcv2kg-qMozgLt-SJmVs5TZFcleGasQngxbM&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=jKRLHkMIRZvP4z314k3iqg&oh=00_AfrU2W_2ec8UjkEpD-suMaSKPkdIEI8FyKrEGcS4imDvcA&oe=6971746D">
+                <i class="fa-solid fa-mug-hot fa-2x logo"></i></a>
+            </li>
+            <!-- Desktop Nav Items -->
+            <li><a class="desktop-nav-item" href="#">Menu</a></li>
+            <li><a class="desktop-nav-item" href="#">Rewards</a></li>
+            <li><a class="desktop-nav-item" href="#">Gift Cards</a></li>
+            <!-- Hamburger Menu Buttons -->
+            <li>
+              <button class="hamburger-menu" aria-label="Open Navigation Menu">
+                <i id="ham-menu-icon" class="fa-solid fa-bars"></i>
+                <i id="ham-menu-close" class="fa-solid fa-square-xmark hidden"></i>
+              </button>
+            </li>
+          </ul>
+        </div>
+        <div class="nav-secondary-links">
+          <ul>
+            <li class="nav-location">
+              <span><i class="fa-solid fa-location-dot"></i></span>
+              <a class="block-link" href="#">Find a Store</a>
+            </li>
+            <li>
+              <button class="button">Sign In</button>
+            </li>
+            <li>
+              <button class="button button-dark">Join Now</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- Mobile Nav Menu -->
+      <div class="mobile-nav-menu">
+        <ul>
+          <li>
+            <button class="nav-menu-button">
+              <span class="mobile-nav-item">Menu</span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </li>
+          <li><a class="mobile-nav-item" href="#">Rewards</a></li>
+          <li><a class="mobile-nav-item" href="#">Gift Cards</a></li>
+          <hr />
+        </ul>
+        <div class="ham-nav-menu-buttons">
+          <button class="button">Sign In</button>
+          <button class="button">Join Now</button>
+        </div>
+        <div class="ham-nav-menu-links">
+          <a class="block-link" href="#">Find a Store</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <section class="primary-cta card-container">
+      <div class="primary-cta-slogan card-item">
+        <h2>
+          <span class="secondary-color">Wendy </span><br /><span class="stroke">NotBurger</span>
+        </h2>
+      </div>
+      <div class="primary-cta card-item text-block-padding column">
+        <h1>Join Crochet</h1>
+        <p>
+          edit this notice text later ... 
+        </p>
+        <a class="button button-light no-decoration" href="#"> button </a>
+      </div>
+    </section>
+    <section class="holiday-cta card-container">
+      <div class="holiday-cta-image card-item">
+        <figure class="card-figure">
+          <img class="card-image" src="./photo-01.png" alt="Cup of coffee on a pink windowsill" />
+          <figcaption class="card-caption">
+            Photo by
+            <a href="./photo-01.png" target="_blank"> generate </a>
+            <a href="./photo-01.png" target="_blank">-</a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="holiday-cta card-item text-block-padding column">
+        <h2>Hello, holiday weekend</h2>
+        <p>
+          edit this text later ...
+        </p>
+        <a class="button button-light no-decoration" href="#"> button </a>
+      </div>
+    </section>
+    <section class="featured-product-cta card-container">
+      <div class="featured-product-image card-item">
+        <figure class="card-figure">
+          <img class="card-image" src="./photo-01.png" alt="script" />
+          <figcaption class="card-caption">
+            Photo by
+            <a href="./photo-01.png" target="_blank"> generate</a>
+
+            <a href="./photo-01.png" target="_blank">-</a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="featured-product-cta card-item text-block-padding column">
+        <h2>Hooray for Crochet</h2>
+        <p>
+          ... 
+        </p>
+        <a class="button button-light no-decoration" href="#"> button </a>
+      </div>
+    </section>
+    <section class="card-container">
+      <div class="notice text-block-padding">
+        <h3 class="card-item notice">Notice</h3>
+        <p class="card-item notice">
+          edit this notice text later ...
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <hr />
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-links">
+      <ul>
+        <li>
+          <div class="about link-card">
+            <div class="link-top-card about-clickable">
+              <h3>About Us</h3>
+              <button aria-label="Expand to learn more about us" aria-expanded="false">
+                <i class="fa-solid fa-angle-down about-arrow"></i>
+              </button>
+            </div>
+            <ul class="link-bottom-card about-hidden hidden">
+              <li><a href="#">Our Company</a></li>
+              <li><a href="#">Our Product</a></li>
+              <li><a href="#">Stories and News</a></li>
+              <li><a href="#">Archive</a></li>
+              <li><a href="#">Investor Relations</a></li>
+              <li><a href="#">Customer Service</a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="careers link-card">
+            <div class="link-top-card careers-clickable">
+              <h3>Careers</h3>
+              <button aria-label="Expand to learn more about our careers" aria-expanded="false">
+                <i class="fa-solid fa-angle-down about-link careers-arrow"></i>
+              </button>
+            </div>
+            <ul class="link-bottom-card careers-hidden hidden">
+              <li><a href="#">Culture and Values</a></li>
+              <li><a href="#">Inclusion, Diversity, and Equity</a></li>
+              <li><a href="#">College Achievement Plan</a></li>
+              <li><a href="#">Alumni Community</a></li>
+              <li><a href="#">International Careers</a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="social-impact link-card">
+            <div class="link-top-card social-impact-clickable">
+              <h3>Social Impact</h3>
+              <button aria-label="Expand to learn more about our social impact" aria-expanded="false">
+                <i class="fa-solid fa-angle-down about-link social-impact-arrow"></i>
+              </button>
+            </div>
+            <ul class="link-bottom-card social-impact-hidden hidden">
+              <li><a href="#">People</a></li>
+              <li><a href="#">Planet</a></li>
+              <li>
+                <a href="#">Environmental and Social Impact Reporting</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="for-business-partners link-card">
+            <div class="link-top-card business-partners-clickable">
+              <h3>For Business Partners</h3>
+              <button aria-label="Expand to learn more about our partnerships" aria-expanded="false">
+                <i class="fa-solid fa-angle-down about-link business-partners-arrow"></i>
+              </button>
+            </div>
+            <ul class="link-bottom-card business-partners-hidden hidden">
+              <li><a href="#">Support Center</a></li>
+              <li><a href="#">Suppliers</a></li>
+              <li><a href="#">Corporate Gift Card Sales</a></li>
+              <li><a href="#">Office and Service</a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="order-and-pickup link-card">
+            <div class="link-top-card order-clickable">
+              <h3>Order and Pickup</h3>
+              <button aria-label="Expand to learn more about ordering and pickup options" aria-expanded="false">
+                <i class="fa-solid fa-angle-down about-link order-arrow"></i>
+              </button>
+            </div>
+            <ul class="link-bottom-card order-hidden hidden">
+              <li><a href="#">Order on the App</a></li>
+              <li><a href="#">Order on the Web</a></li>
+              <li><a href="#">Delivery</a></li>
+              <li><a href="#">Order and Pickup Options</a></li>
+              <li><a href="#">Explore and Find Coffee for Home</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <hr />
+    <ul class="social-media-links flex">
+      <li>
+        <a href="#">
+          <i class="fa-brands fa-spotify"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-brands fa-pinterest-p"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </li>
+    </ul>
+    <ul class="supplemental-links">
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Terms of Use</a></li>
+      <li><a href="#">CA Supply Chain Act</a></li>
+      <li><a href="#">Cookie Preferences</a></li>
+    </ul>
+    <p class="copyright">© 2026 WendyNotBurger. All rights reserved.</p>
+  </footer>
+</body>
