--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> WendyNotBurger </title>
   <!--link rel="stylesheet" href="css/normalize.css" /-->
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/972df6eb1d.js" crossorigin="anonymous"></script>
-  <script defer src="./js/main.js"></script>
+  <script defer src="./main.js"></script>
 </head>
 
 <body>
