--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul class="topnav">
             <!-- Main Logo -->
             <li>
-              <a href="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/307337851_533824542081747_5371259397579522463_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=1-9atA9s334Q7kNvwFTm0Yu&_nc_oc=AdkUeQsoJ9dIPIg5TWU20lGp4InmXlngcv2kg-qMozgLt-SJmVs5TZFcleGasQngxbM&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=jKRLHkMIRZvP4z314k3iqg&oh=00_AfrU2W_2ec8UjkEpD-suMaSKPkdIEI8FyKrEGcS4imDvcA&oe=6971746D">
+              <a href="/pic/photo-main.jpg">
                 <i class="fa-solid fa-mug-hot fa-2x logo"></i></a>
             </li>
             <!-- Desktop Nav Items -->
@@ -95,12 +95,7 @@
     <section class="holiday-cta card-container">
       <div class="holiday-cta-image card-item">
         <figure class="card-figure">
-          <img class="card-image" src="./photo-01.png" alt="Cup of coffee on a pink windowsill" />
-          <figcaption class="card-caption">
-            Photo by
-            <a href="./photo-01.png" target="_blank"> generate </a>
-            <a href="./photo-01.png" target="_blank">-</a>
-          </figcaption>
+          <img class="card-image" src="./pic/photo-01.jpg" alt="blue sky with hat" />
         </figure>
       </div>
       <div class="holiday-cta card-item text-block-padding column">
@@ -114,13 +109,7 @@
     <section class="featured-product-cta card-container">
       <div class="featured-product-image card-item">
         <figure class="card-figure">
-          <img class="card-image" src="./photo-01.png" alt="script" />
-          <figcaption class="card-caption">
-            Photo by
-            <a href="./photo-01.png" target="_blank"> generate</a>
-
-            <a href="./photo-01.png" target="_blank">-</a>
-          </figcaption>
+          <img class="card-image" src="./pic/photo-02.jpg" alt="script" />
         </figure>
       </div>
       <div class="featured-product-cta card-item text-block-padding column">
