--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul class="topnav">
             <!-- Main Logo -->
             <li>
-              <a href="/pic/photo-main.jpg">
+              <a href="./pic/photo-main.jpg">
                 <i class="fa-solid fa-mug-hot fa-2x logo"></i></a>
             </li>
             <!-- Desktop Nav Items -->
