--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           <ul class="topnav">
             <!-- Main Logo -->
             <li>
-              <a href="./pic/photo-main.jpg">
-                <i class="fa-solid fa-mug-hot fa-2x logo"></i></a>
+                <a href="./">
+                    <img class="logo" src="./pic/photo-main.jpg" alt="logo"/>
+                </a>
             </li>
             <!-- Desktop Nav Items -->
             <li><a class="desktop-nav-item" href="#">Menu</a></li>
