--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Main Logo -->
             <li>
                 <a href="./">
-                    <img class="logo" src="./pic/photo-main.jpg" alt="logo"/>
+                    <img class="logo-img" src="./pic/photo-main.jpg" alt="logo"/>
                 </a>
             </li>
             <!-- Desktop Nav Items -->
