add fb and insta links

--- a/index.html
+++ b/index.html
@@ -227,40 +227,19 @@
     <hr />
     <ul class="social-media-links flex">
       <li>
-        <a href="#">
-          <i class="fa-brands fa-spotify"></i>
-        </a>
-      </li>
-      <li>
-        <a href="#">
+        <a href="https://www.facebook.com/wendynotburger">
           <i class="fa-brands fa-facebook-f"></i>
         </a>
       </li>
       <li>
-        <a href="#">
-          <i class="fa-brands fa-pinterest-p"></i>
-        </a>
-      </li>
-      <li>
-        <a href="#">
+        <a href="https://www.instagram.com/wendynotburger/">
           <i class="fa-brands fa-instagram"></i>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="fa-brands fa-youtube"></i>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="fa-brands fa-twitter"></i>
         </a>
       </li>
     </ul>
     <ul class="supplemental-links">
       <li><a href="#">Privacy Policy</a></li>
       <li><a href="#">Terms of Use</a></li>
-      <li><a href="#">CA Supply Chain Act</a></li>
       <li><a href="#">Cookie Preferences</a></li>
     </ul>
     <p class="copyright">© 2026 WendyNotBurger. All rights reserved.</p>
